# bridge-latam-technical-test

./: .gitignore  README.md  app.vue  nuxt.config.ts  package-lock.json  package.json
components/: CompanyScoreWidget.vue
score-service/: Dockerfile  pyproject.toml
score-service/score_service/: __init__.py  config.py  main.py  models.py  scoring.py
score-service/tests/: conftest.py  test_score.py
server/api/: score.post.ts
